--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./src/assets/logo.png" />
+    <link rel="icon" href="https://www.airbus.com/themes/custom/airbus_web_experience_ui/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>GPT-3</title>
+    <title>AIRBUS Aerothon 6.0 - Finale</title>
   </head>
   <body>
     <div id="root"></div>
